Oppdater build.gradle.kts (#598)
* Oppdater build.gradle.kts

* Rename til FellesTestOppsett

* Bump Testcontainer-versjoner

* Oppdater build.gradle.kts

* Revert "Rename til FellesTestOppsett"

This reverts commit 63c15a568a48ad6c3ce9c67a006924284490b18b.

* Rename

* Opprom